~CategoryPage fixes (keys error, page width, skeleton overflow, comments skeleton when 0 comments)

--- a/react/src/Components/CategoryPage/CategoryPage.module.scss
+++ b/react/src/Components/CategoryPage/CategoryPage.module.scss
@@ -1,6 +1,7 @@
 .categoryPage {
   display: grid;
   grid-template-columns: var(--main3cols-grid-template-cols);
+  width: 100%;
   
   & > * {
     grid-column: 2/2;
