--- a/react/src/Components/CategoryPage/CategoryStorycard.module.scss
+++ b/react/src/Components/CategoryPage/CategoryStorycard.module.scss
@@ -36,6 +36,7 @@
   flex-direction: column;
   gap: 0.125rem;
   line-height: 20.18px;
+  overflow: hidden;
   
   max-height: 364px;
   
